--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@n1ru4l/react-in-center-of-screen": "1.0.0-alpha.4",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
@@ -18,8 +19,8 @@
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
+    "@ui-kitten/components": "^5.0.0",
     "moment": "^2.29.1",
-    "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-moment": "^1.0.0",
     "react-native": "0.63.3",
@@ -29,7 +30,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^7.1.0",
+    "react-native-ui-kitten": "^4.4.1",
     "react-native-video": "^5.1.0-alpha8"
   },
   "devDependencies": {
