--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "^2.11.0",
     "react-native-svg": "^12.1.0",
     "react-native-ui-kitten": "^4.4.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8"
   },
   "devDependencies": {
