--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-moment": "^1.0.0",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-inviewport": "^1.1.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
@@ -34,7 +35,8 @@
     "react-native-svg": "^12.1.0",
     "react-native-ui-kitten": "^4.4.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-video": "^5.1.0-alpha8"
+    "react-native-video": "^5.1.0-alpha8",
+    "undercore": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
